name:                xbee
version:             0.2
synopsis:            Haskell interface to XBees based upon SouSiT

description:         Communication via a locally attached XBee device (mostly over USB).

license:             BSD3
license-file:        LICENSE
author:              Mario Siegenthaler
maintainer:          msiegenthaler@inventsoft.ch
homepage:            https://github.com/msiegenthaler/haskell-xbee
copyright:           (c) 2012 Mario Siegenthaler
category:            System
build-type:          Simple
extra-source-files:  README, Print.hs, DeviceTest.hs
cabal-version:       >= 1.8

library
  exposed-modules:   System.Hardware.XBee.Command, System.Hardware.XBee.Frame,
                     System.Hardware.XBee.Device,
                     Control.RequestResponseCorrelator,
                     Control.Concurrent.Future, Control.Concurrent.Latch,
                     Control.Concurrent.ThreadGroup,
                     Data.Circular
  build-depends:     base > 4, sousit >= 0.4, serialIO, cereal, bytestring, time-units, stm, mtl,
                     utf8-string, transformers
  

test-suite   command-test
  type:              exitcode-stdio-1.0
  main-Is:           test/CommandTest.hs
  other-modules:     Test.XBeeTestSupport
  build-depends:     base > 4, mtl, xbee, cereal, bytestring, sousit >= 0.4,
                     QuickCheck > 2, test-framework >= 0.3.3, test-framework-quickcheck2 >= 0.2.9
